infra/dev/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: samoz93/chat-api
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /api/images
              name: pv-volume
      volumes:
        - name: pv-volume
          persistentVolumeClaim:
            claimName: pv-claim-api

---
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
  namespace: chat-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: api
