infra/dev/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-d
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.3-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pv-claim
      volumes:
        - name: postgres-pv-claim
          persistentVolumeClaim:
            claimName: pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: chat-app
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres-connection
