infra/dev/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask-api
          image: samoz93/flask-api
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: flask-storage
              mountPath: /rooms
      volumes:
        - name: flask-storage
          persistentVolumeClaim:
            claimName: flask-claim
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: chat-app
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: flask
