infra/dev/room-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room
  template:
    metadata:
      labels:
        app: room
    spec:
      containers:
        - name: room
          image: samoz93/chat-api/room-micro-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: room-service
  namespace: chat-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: room
